...
            "state": "translated",
            "value": "顯示歌詞疊層"
          }
        }
      }
    },
    "Show Mode": {
      "localizations": {
        "zh-Hant": {
          "stringUnit": {
            "state": "translated",
            "value": "演出模式"
          }
...
            "state": "translated",
            "value": "目標"
          }
        }
      }
    },
    "Teal": {
      "localizations": {
        "zh-Hant": {
          "stringUnit": {
            "state": "translated",
            "value": "青色"
          }
...
